2011-02-02  Patrick Gansterer  <paroga@webkit.org>

        Unreviewed WinCE build fix for r77397.

        * page/wince/FrameWinCE.cpp:
        (WebCore::computePageRectsForFrame):

2011-02-02  Patrick Gansterer  <paroga@webkit.org>

        Unreviewed WinCE build fix for r77398.

        * platform/graphics/wince/PlatformPathWinCE.cpp:
        (WebCore::containsPoint):
        (WebCore::inflateRectToContainPoint):
        (WebCore::PlatformPath::addRect):
        * platform/graphics/wince/SharedBitmap.cpp:
        (WebCore::SharedBitmap::drawPattern):
        * rendering/RenderThemeWinCE.cpp:
        (WebCore::RenderThemeWinCE::paintMenuListButton):
        (WebCore::RenderThemeWinCE::paintSearchFieldCancelButton):
        (WebCore::RenderThemeWinCE::paintSliderTrack):
        (WebCore::RenderThemeWinCE::paintMediaMuteButton):
        (WebCore::RenderThemeWinCE::paintMediaPlayButton):
        (WebCore::RenderThemeWinCE::paintMediaSeekBackButton):
        (WebCore::RenderThemeWinCE::paintMediaSeekForwardButton):

2011-02-02  Jian Li  <jianli@chromium.org>

        Reviewed by Kenneth Russell.

        [V8] Accessing DataView with index of -1 returns 0, doesn't throw
        https://bugs.webkit.org/show_bug.cgi?id=53559

        Added test cases to cover this in fast/canvas/webgl/data-view-test.html.

        * html/canvas/DataView.h:
        (WebCore::DataView::beyondRange):

2011-02-02  Sam Weinig  <sam@webkit.org>

        Reviewed by Beth Dakin.

        Add ChromeClient function to paint custom overhang areas.
        https://bugs.webkit.org/show_bug.cgi?id=53639

        * page/Chrome.cpp:
        (WebCore::ChromeClient::paintCustomOverhangArea):
        * page/ChromeClient.h:
        Add ChromeClient function.

        * page/FrameView.cpp:
        (WebCore::FrameView::paintOverhangAreas):
        * page/FrameView.h:
        Call out the the ChromeClient, call ScrollView base implementation
        if the ChromeClient returns false.
