@@ -215,6 +215,7 @@ __ZN7WebCore11memoryCacheEv
 __ZN7WebCore11toUserSpaceERK7_NSRectP8NSWindow
 __ZN7WebCore11writeToFileEiPKci
 __ZN7WebCore12ChromeClient20paintCustomScrollbarEPNS_15GraphicsContextERKNS_9FloatRectENS_20ScrollbarControlSizeEjNS_13ScrollbarPartEbffj
+__ZN7WebCore12ChromeClient23paintCustomOverhangAreaEPNS_15GraphicsContextERKNS_7IntRectES5_S5_
 __ZN7WebCore12ChromeClient23paintCustomScrollCornerEPNS_15GraphicsContextERKNS_9FloatRectE
 __ZN7WebCore12EditingStyleD1Ev
 __ZN7WebCore12EventHandler10mouseMovedEP7NSEvent
@@ -1297,9 +1298,21 @@ _wkSignalCFReadStreamError
 _wkSignalCFReadStreamHasBytes
 
 #if !defined(BUILDING_ON_TIGER) && !defined(BUILDING_ON_LEOPARD) && !defined(BUILDING_ON_SNOW_LEOPARD)
+_wkContentAreaDidHide
+_wkContentAreaDidShow
+_wkContentAreaResized
+_wkContentAreaScrolled
+_wkContentAreaWillPaint
 _wkCreateCTTypesetterWithUniCharProviderAndOptions
+_wkHorizontalScrollbarPainterForController
 _wkIOSurfaceContextCreate
 _wkIOSurfaceContextCreateImage
+_wkMakeScrollbarPainter
+_wkMakeScrollbarPainterController
+_wkMakeScrollbarReplacementPainter
+_wkMouseEnteredContentArea
+_wkMouseExitedContentArea
+_wkMouseMovedInContentArea
 _wkScrollbarMinimumThumbLength
 _wkScrollbarMinimumTotalLengthNeededForThumb
 _wkScrollbarPainterIsHorizontal
@@ -1307,23 +1320,13 @@ _wkScrollbarPainterKnobAlpha
 _wkScrollbarPainterPaint
 _wkScrollbarPainterSetDelegate
 _wkScrollbarPainterSetOverlayState
+_wkScrollbarPainterTrackAlpha
 _wkScrollbarPainterUsesOverlayScrollers
 _wkScrollbarThickness
-_wkSetScrollbarPainterKnobAlpha
-_wkMakeScrollbarPainter
-_wkMakeScrollbarReplacementPainter
-_wkContentAreaDidHide
-_wkContentAreaDidShow
-_wkContentAreaResized
-_wkContentAreaScrolled
-_wkContentAreaWillPaint
-_wkHorizontalScrollbarPainterForController
-_wkMakeScrollbarPainterController
-_wkMouseEnteredContentArea
-_wkMouseExitedContentArea
-_wkMouseMovedInContentArea
 _wkSetPainterForPainterController
 _wkSetScrollbarPainterControllerStyle
+_wkSetScrollbarPainterKnobAlpha
+_wkSetScrollbarPainterTrackAlpha
 _wkVerticalScrollbarPainterForController
 _wkWillEndLiveResize
 _wkWillStartLiveResize
