@@ -1,3 +1,9 @@
+2011-02-02  Beth Dakin  <bdakin@apple.com>
+
+        Build fix.
+
+        * WebCore.exp.in:
+
 2011-02-02  Patrick Gansterer  <paroga@webkit.org>
 
         Unreviewed WinCE build fix for r77397.
